test/compile_errors/stage1/obj/attempted_implicit_cast_from_T_to_slice_const_T.zig
export fn entry() void {
    const x: [*]const bool = true;
    _ = x;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:30: error: expected type '[*]const bool', found 'bool'
